--- a/DegitalBankingWeb/src/app/new-customer/new-customer.component.html
+++ b/DegitalBankingWeb/src/app/new-customer/new-customer.component.html
@@ -11,7 +11,7 @@
           <label class="form-label">Email :</label>
           <input type="text" formControlName="email" class="form-control">
         </div>
-        <button class="btn btn-success">Save</button>
+        <button [disabled]="!newCustomerFormGroup.valid" class="btn btn-success">Save</button>
       </form>
     </div>
 
